see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

26-Aug-2010 Ian MacLennan
 # [!21949] Reverted systematic elimination of DS as directory separator

26-Aug-2010 Jean-Marie Simonet
 # [#22044] Menu level filter wording. Thanks Bill.
 # [#22056] incomplete language strings in admin contact. Thanks Bill.
 # [#21888] Forbidden keys in language files not properly handled. Thanks Nikolai, Hannes, Andrew.  

26-Aug-2010 Andrew Eddie
 # Fixed issue [#22064] Non-functional, unfinished, duplicated and outdated form field: mediamanager (Artyom Bisyarin).
 # Fixed issue [#21977] Warning: Invalid argument supplied for foreach() in \libraries\joomla\document\html\html.php on line 161 (Ronald Pijpers, Bill Richardson).
 # Fixed issue [#21717] Create action in installer permissions configuration (Sander Potjer, Michael Babker).
 # Fixed issue [#22060] Banners Options refactoring- Code missing (Jean-Marie Simonet).
 # Fixed issue [#22063] Select with optgroup not works in admin component form (Tomasz Narloch, Bill Richardson).
 # Fixed issue [#22045] block users error message (Brian Teeman, Bill Richardson, Michael Babker).
 # Fixed issue [#22079] Installer item types hard coded (Samuel Moffatt).
 # Fixed issue [#22078] Install Data update for extension update (Samuel Moffatt).
 
25-Aug-2010 Andrew Eddie
 # Fixed issue [#22032] Category editing gives error on saving/canceling (Roland Dalmulder).
 # Fixed issue [#21976] deprecated function ereg_replace mod_footer (Ronald Pijpers, Bill Richardson).
 # Fixed issue [#18506] Category Manager / Edit Category: Edit Groups + Reset to Inherit links do not work (Andy Tasch, Bill Richardson).